# afc-crs-all-you-need-is-a-fuzzing-brain

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FuzzingBrain.sh  Makefile  README.md  SECURITY.md  WORKDIR_CONFIGURATION.md  context.md  deploy-docker-images.sh  requirements.txt  run_patch_system.py  set_custom_workdir.sh
crs/: tmp  (+18 more)
v2/: .env.example  .gitignore  ARCHITECTURE.md  FuzzingBrain.sh  README.md  check_pov_blob.py  create_work.sh  docker-compose.yml  pyproject.toml  requirements.txt  run-docker.sh  schema.sql  start_analysis_server.py  view_conversation.py  view_task.py
v2/docs/: PHASE_SUMMARY.md  bench_results.md  build_compat_findings.md  external_harness_import.md
v2/examples/: README.md
v2/fuzzingbrain/: __init__.py  api_server.py  celery_app.py  cli.py  db.py  main.py  mcp_server.py  orchestrator.py  pipeline.py
v2/scripts/: build_check.py  build_compat.py  run_bench.py  sample_projects.txt
v2/tests/: __init__.py  conftest.py  test_agent_context_isolation.py  test_analyzer_socket_isolation.py  test_bench_importer.py  test_build_check.py  test_build_compat.py  test_build_error_hint.py  test_builder_engine.py  test_cost_caching.py  test_direction_creation.py  test_direction_hint.py  test_dispatch_workflow.py  test_external_harness_import.py  test_full_pipeline.py  test_limit_config.py  test_llm_retry.py  test_models.py  test_pipeline.py  test_pipeline_chain.py  test_prompt_caching.py  test_repository.py  test_run_bench.py  test_sp_creation.py  test_sp_verify.py  test_stopping_conditions.py  test_tools.py  (+2 more)
(+497 files in other folders)
