# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzingbrain-v2"
version = "2.0.0.dev0"
description = "Autonomous vulnerability discovery: breadth fuzzer engineering + depth SP reasoning over a shared seed pool"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    # filled in as modules land; intentionally minimal during scaffolding
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
fuzzingbrain = "fuzzingbrain.cli:main"

[tool.setuptools.packages.find]
include = ["fuzzingbrain*"]
